--- a/ComparedLyric.csproj
+++ b/ComparedLyric.csproj
@@ -114,6 +114,9 @@
   <ItemGroup>
     <None Include="Resources\Compared_Child.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Compared_Child_Remix.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
