--- a/ComparedLyric.csproj
+++ b/ComparedLyric.csproj
@@ -70,6 +70,7 @@
     <Compile Include="MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\LyricsParser.cs" />
     <Compile Include="SongListControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
