--- a/ComparedLyric.csproj
+++ b/ComparedLyric.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Lyrics\HideAndSeekAlone.cs" />
     <Compile Include="Lyrics\It%27sRainingAfterAll.cs" />
+    <Compile Include="Lyrics\UnderTheSummerBreeze.cs" />
     <Compile Include="Lyrics\TrappedInThePast.cs" />
     <Compile Include="Lyrics\ComparedChild.cs" />
     <Compile Include="MainView.cs">
