--- a/ComparedLyric.csproj
+++ b/ComparedLyric.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Lyrics\BeingLowAsDirt.cs" />
     <Compile Include="Lyrics\BusToTheOtherWorld.cs" />
     <Compile Include="Lyrics\HideAndSeekAlone.cs" />
+    <Compile Include="Lyrics\IfThereWasAnEndpoint.cs" />
     <Compile Include="Lyrics\It%27sRainingAfterAll.cs" />
     <Compile Include="Lyrics\UnderTheSummerBreeze.cs" />
     <Compile Include="Lyrics\TrappedInThePast.cs" />
