Separate playlist into another class

--- a/ComparedLyric.csproj
+++ b/ComparedLyric.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Modules\LyricsParser.cs" />
+    <Compile Include="Modules\Playlist.cs" />
     <Compile Include="Modules\TimedLyrics.cs" />
     <Compile Include="SongListControl.cs">
       <SubType>UserControl</SubType>
